--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1298,6 +1298,9 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
 .mr-4 {
   margin-right: 1rem;
 }
@@ -1307,8 +1310,8 @@ select {
 .ml-5 {
   margin-left: 1.25rem;
 }
-.mb-5 {
-  margin-bottom: 1.25rem;
+.ml-10 {
+  margin-left: 2.5rem;
 }
 .block {
   display: block;
@@ -1511,6 +1514,12 @@ select {
 .basis-1\/3 {
   flex-basis: 33.333333%;
 }
+.basis-1\/4 {
+  flex-basis: 25%;
+}
+.basis-1\/2 {
+  flex-basis: 50%;
+}
 .origin-top-left {
   transform-origin: top left;
 }
@@ -1681,11 +1690,11 @@ select {
 .gap-2 {
   gap: 0.5rem;
 }
-.gap-5 {
-  gap: 1.25rem;
-}
 .gap-3 {
   gap: 0.75rem;
+}
+.gap-5 {
+  gap: 1.25rem;
 }
 .gap-10 {
   gap: 2.5rem;
