--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5261,4 +5261,10 @@ select {
     padding-right: 2rem;
   }
 }
+@media (min-width: 1280px) {
+
+  .xl\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
 
