--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5512,6 +5512,10 @@ select {
     grid-column: span 4 / span 4;
   }
 
+  .lg\:ml-3 {
+    margin-left: 0.75rem;
+  }
+
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
